--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -7,25 +7,194 @@
         xmlns:p="http://primefaces.org/ui">
     <h:form id="menutopbar">
 
-        <ps:menu>
-            <f:facet name="options">
-                <p:commandButton value="Dashboard" icon="fa fa-home" styleClass="Fs14 BlueButton"
-                                 actionListener="#{uiLayout.defaultHome}"/>
-            </f:facet>
+        <script>
+            $(document).ready(function() {
+                $(".nav li a").each(function() {
+                    if ($(this).next().length > 0) {
+                        $(this).addClass("parent");
+                    };
+                })
 
-            <p:menuitem value="New Account" rendered="#{webutil.hasAccess('USER')}"
-                        actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
+                $(".toggleMenu").click(function(e) {
+                    e.preventDefault();
+                    $(this).toggleClass("active");
+                    $(".nav").toggle();
+                });
+                adjustMenu();
+            })
 
-            <p:menuitem value="Account Emulation" style="margin: 0px 20px;" id="menuFlPrcsbtn" rendered="#{webutil.hasAccess('SuperAdmin')}"
-                        actionListener="#{uiLayout.doMenuAction('productadmin','accountEmulation.xhtml')}"/>
+            $(window).bind('resize orientationchange', function() {
+                ww = document.body.clientWidth;
+                adjustMenu();
+            });
 
-            <p:menuitem value="File Processing" style="margin: 0px 20px;" id="menuAcctEmulbtn" rendered="#{webutil.hasAccess('SuperAdmin')}"
-                        actionListener="#{uiLayout.doMenuAction('productadmin','fileProcessEmulation.xhtml')}"/>
+            var adjustMenu = function() {
+                var ww = document.body.clientWidth;
+                if (768 > ww) {
+                    $(".toggleMenu").css("display", "inline-block");
+                    if (!$(".toggleMenu").hasClass("active")) {
+                        $(".nav").hide();
+                    } else {
+                        $(".nav").show();
+                    }
 
-            <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.isAggregatorMenuActive()}"
-                    actionListener="#{aggrBean.startup('D')}" />
+                    $(".nav li").unbind('mouseenter mouseleave click');
+                    $(".nav li a.parent").unbind('click').bind('click', function(e) {
+                        // must be attached to anchor element to prevent bubbling
+                        e.preventDefault();
+                        $(this).parent("li").toggleClass("hover");
+                    });
+                }
+                else if (ww >= 768) {
+                    $(".toggleMenu").css("display", "none");
+                    $(".nav").show();
+                    $(".nav li").removeClass("hover");
+                    $(".nav li a").unbind('click');
+                    $(".nav li").unbind('click').bind('click', function() {
+                        // must be attached to li so that mouseleave is not triggered when hover over submenu
 
-        </ps:menu>
+                        $(this).toggleClass('hover').siblings().removeClass('hover');
+
+                    });
+
+
+                }
+            }
+        </script>
+
+
+
+        <a class="toggleMenu" href="#">Menu</a>
+
+            <ul class="nav" id="menuMainNavigation" >
+                <li  class="test" id="dashboardMenuHighlight">
+                    <a href="#{uiLayout.defaultHome}" id="menudashboardbtn">Dashboard</a>
+
+                </li>
+
+                <ui:fragment rendered="#{webutil.hasAccess('USER')}">
+                    <li  id="newaccountMenuHighlight">
+                        <p:commandLink rendered="true" id="menunewacctbtn"
+                                       actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}">
+                            <h:outputText value="New Account"/>
+                        </p:commandLink>
+                    </li>
+
+                </ui:fragment>
+
+                <ui:fragment rendered="#{(webutil.hasSubMenu('Operations')) and ((webutil.hasAccess('Advisor') and webutil.hasRole('Operations')) or webutil.hasAccess('SuperAdmin'))}">
+                    <li  class="">
+                        <a href="#" class="submenuOperBtn" id="menuOperbtn">Operations</a>
+                        <ul>
+                            <ui:fragment rendered="#{webutil.hasMenu('Trade','Operations')}">
+                                <li id="tradeMenuHighlight">
+                                    <a href="/pages/advisor/operations/trade.xhtml" id="menutradebtn">Trade</a>
+                                </li>
+                            </ui:fragment>
+                            <ui:fragment rendered="#{webutil.hasMenu('Model','Operations')}">
+                                <div class="menuSeperator"></div>
+                                <li id="modelMenuHighlight">
+                                    <a href="/pages/advisor/assetworkflownew.xhtml" id="menutradebtn">Model</a>
+                                </li>
+                            </ui:fragment>
+                        </ul>
+                    </li>
+                </ui:fragment>
+
+                <ui:fragment rendered="#{(webutil.hasSubMenu('Admin')) and ((webutil.hasAccess('Advisor') and webutil.hasRole('Admin')) or webutil.hasAccess('SuperAdmin'))}">
+                    <li  class="">
+                        <a href="#" class="submenuAdminBtn" id="menuAdminbtn">Admin</a>
+                        <ul>
+                            <ui:fragment rendered="#{webutil.hasMenu('Login Management','Admin')}">
+                                <li id="AcctEmulMenuHighlight">
+                                    <a href="/pages/advisor/user_mng.xhtml" id="menuLoginMgmtbtn">Login Management</a>
+                                </li>
+                            </ui:fragment>
+
+                            <ui:fragment rendered="#{webutil.hasMenu('Advisor Management','Admin')}">
+                                <div class="menuSeperator"></div>
+                                <li id="AcctEmulMenuHighlight">
+                                    <a href="/pages/productadmin/adv.xhtml" id="menuAdvMgmtbtn">Advisor Management</a>
+                                </li>
+                            </ui:fragment>
+
+                            <ui:fragment rendered="#{webutil.hasMenu('Email Logs','Admin')}">
+                                <div class="menuSeperator"></div>
+                                <li id="AcctEmulMenuHighlight">
+                                    <a href="/pages/productadmin/email_logs.xhtml" id="menuEmailLogbtn">Email Logs</a>
+                                </li>
+                            </ui:fragment>
+                        </ul>
+                    </li>
+                </ui:fragment>
+
+                <ui:fragment rendered="#{webutil.hasAccess('SuperAdmin')}">
+                    <li  class="">
+                        <a href="#" class="submenuSABtn" id="menuSuperAdminbtn">Product Admin</a>
+                        <ul>
+                            <li id="filePrcsMenuHighlight">
+                                <a href="/pages/productadmin/fileProcessEmulation.xhtml" id="menuFlPrcsbtn">File Processing</a>
+                            </li>
+                            <div class="menuSeperator"></div>
+                            <li id="AcctEmulMenuHighlight">
+                                <a href="/pages/productadmin/accountEmulation.xhtml" id="menuAcctEmulbtn">Account Emulation</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ui:fragment>
+
+
+                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                    <li  class="">
+                        <p:commandLink rendered="true" id="menuaggrbtn"
+                                       actionListener="#{aggrBean.startup('D')}">
+                            <h:outputText value="Aggregation"/>
+                        </p:commandLink>
+
+                    </li>
+                </ui:fragment>
+
+                <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                    <li>
+                        <p:commandLink rendered="true" id="menureportsbtn"
+                                       actionListener="#{uiLayout.doMenuAction('consumer', 'creports.xhtml')}">
+                            <h:outputText value="Reports"/>
+                        </p:commandLink>
+                    </li>
+                </ui:fragment>
+
+                <li id="">
+                    <a href="#" class="" id="">My Profile</a>
+
+                    <ul>
+                        <li><a href="/pages/common/myprofile.xhtml">Setting</a></li>
+                        <div class="menuSeperator"></div>
+                        <li><a href="">My Advisors</a></li>
+                        <div class="menuSeperator"></div>
+                        <li>
+                            <h:form>
+                                <h:commandLink id="menulogoutBtn" actionListener="#{sessionControl.logout}" styleClass="idLogoutCommon">
+                                    <h:outputText value="Logout"/>
+                                </h:commandLink>
+                            </h:form>
+                        </li>
+                    </ul>
+                </li>
+
+
+            </ul>
+
+
+
+
+
+
+
+
+
+
+
+
     </h:form>
 
 </ui:composition>
